components/headers/header.module.css
.navbar {
    overflow: hidden;
    background-color: beige;
    position: fixed;
    width: 100%;
    z-index: 1000;
    display: flex;
    justify-content: center;
    align-items: center;
    transition: background-color 0.3s;
}

.navbar.scrolled {
    background-color: beige;
    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
    top: 0;
}

.navbar .a {
    float: left;
    display: block;
    color: #000;
    text-align: center;
    padding: 14px 16px;
    text-decoration: none;
    font-size: 12px;
    font-weight: bold;
}

.navbar .a:hover {
    background: #000;
    color: #FFF;
}

@media only screen and (max-width: 600px) {
    .navbar {
        overflow: hidden;
        background-color: beige;
        position: fixed;
        width: 100%;
        z-index: 1000;
        display: flex;
        justify-content: center;
        align-items: center;
        transition: background-color 0.3s;
    }
    
    .navbar.scrolled {
        background-color: beige;
        box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
        top: 0%;
    }
    
    .navbar .a {
        float: left;
        display: block;
        color: #000;
        text-align: center;
        padding: 14px 16px;
        text-decoration: none;
        font-size: 10px;
        font-weight: bold
    }
}

